--- a/ejercicio/src/index.css
+++ b/ejercicio/src/index.css
@@ -1,10 +1,64 @@
 body {
+  background-color: #21212A;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  /*background-color: tomato;*/
+  color: #aaa;
+  font-size: 4em;
+  font-weight: 100;
+  letter-spacing: 0.55em;
+  line-height: 83px;
+  text-align: center;
+  text-shadow: 5px 5px 1px black;
+}
+
+#padre {
+  position: relative;
+  padding-top: 2%;
+}
+
+#list {
+  width: 90%;  
+  z-index: 1;
+  position: absolute;
+  left: 2.5%;
+}
+
+#lista {
+  margin: -2.5% auto 0 0;
+  display: flex;
+  min-height: 3.5rem;
+  width: 70%;
+}
+
+li {
+  background-color: grey;
+  border: 1px black solid;
+  border-radius: 10px 25px 0px 0px;
+  list-style-type: none;
+  min-width: 10%;
+  padding-left: 2rem;
+}
+
+li{
+  color: red;
+}
+
+#content {
+  background-color: white;
+  border-radius: 20px 20px 0 0;
+  min-height: 500px;
+  width: 95%;  
+  position: absolute;
+  z-index: 70;
+  left: 2.5%;
 }
 
 code {
