--- a/ejercicio/src/index.css
+++ b/ejercicio/src/index.css
@@ -47,18 +47,23 @@ li {
   padding-left: 2rem;
 }
 
-li{
-  color: red;
+li:nth-child(2) {
+  background-color: white;
 }
 
 #content {
   background-color: white;
   border-radius: 20px 20px 0 0;
-  min-height: 500px;
-  width: 95%;  
+  min-height: 400px;
+  width: 92%;  
   position: absolute;
   z-index: 70;
   left: 2.5%;
+  padding-left: 2%;
+}
+
+#imagen {
+  text-align: center;
 }
 
 code {
